# QualitySoft_T7

./: LICENSE  README.md  source.cpp
cmake/: CMakeLists.txt
dependencies/fltk/: fltk.lib  fltk_forms.lib
source/: Application.cpp  Application.hpp  Console.cpp  Console.hpp  Contact.cpp  Contact.hpp  ContactManager.cpp  ContactManager.hpp  GraphicaUserInterface.cpp  GraphicalUserInterface.cpp  GraphicalUserInterface.hpp  Main.cpp  pugiconfig.hpp  skelton  skelton.cpp
